test/banana/typeck/should_fail/impossible_connection.banana
a -> b

a = IPTablesSource(sleep=0.01)
b = IPTablesSource(sleep=0.01)
# RAISE BananaConnectionError